--- a/JavaScrpit/project-pixel-art-maker-starter-master/index.html
+++ b/JavaScrpit/project-pixel-art-maker-starter-master/index.html
@@ -21,19 +21,16 @@
     <input type="color" id="colorPicker">
 
     <h2>Design Canvas</h2>
-    <table id="pixelCanvas">
-        <tbody>
-            <tr>
-                <td class=''></td>
-                <td class=''></td>
-            </tr>
-            <tr>
-                <td class=''></td>
-                <td class=''></td>
-            </tr>
-        </tbody>
-    </table>
+    <table id="pixelCanvas"></table>
 
     <script src="designs.js"></script>
 </body>
 </html>
+<!-- <tr>
+                <td class=''></td>
+                <td class=''></td>
+            </tr>
+            <tr>
+                <td class=''></td>
+                <td class=''></td>
+            </tr> -->
