--- a/JavaScrpit/project-pixel-art-maker-starter-master/index.html
+++ b/JavaScrpit/project-pixel-art-maker-starter-master/index.html
@@ -5,25 +5,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section id="overlay">
-        <h1>Pixel Art Maker</h1>
+    <section id="back-image">
+        <section id="overlay">
+            <h1>Pixel Art Maker</h1>
 
-        <h2>Choose Grid Size</h2>
-        <form id="sizePicker">
-            Grid Height:
-            <input type="number" id="inputHeight" name="height" min="1" max="30" value="20">
-            Grid Width:
-            <input type="number" id="inputWidth" name="width" min="1" max="30" value="20">
-            <input type="submit">
-        </form>
+            <h2>Choose Grid Size</h2>
+            <form id="sizePicker">
+                Grid Height:
+                <input type="number" id="inputHeight" name="height" min="1" max="16" value="16">
+                Grid Width:
+                <input type="number" id="inputWidth" name="width" min="1" max="25" value="16">
+                <input type="submit">
+            </form>
 
-        <h2>Pick A Color</h2>
-        <input type="color" id="colorPicker" value="#97CDF7">
+            <h2>Pick A Color</h2>
+            <input type="color" id="colorPicker" value="#97CDF7">
 
-        <h2>Design Canvas</h2>
-        <table id="pixelCanvas"></table>
+            <h2>Design Canvas</h2>
+            <table id="pixelCanvas"></table>
 
-        <script src="designs.js"></script>
+            <script src="designs.js"></script>
+        </section>
     </section>
 </body>
 </html>
